--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -20,7 +20,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Village Name<strong class="matMandatory">*</strong>
                         </mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Village Name'" formControlName="VillageName"/>
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Village Name'" formControlName="VillageName"/>
                     </mat-form-field>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">No. of Farmer<strong class="matMandatory">*</strong>
                         </mat-label>
-                        <input [readonly]="is_view" matInput placeholder="Enter No. of Farmer" formControlName="NoOfFarmer"
+                        <input [readonly]="!is_view" matInput placeholder="Enter No. of Farmer" formControlName="NoOfFarmer"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">MaleCount<strong class="matMandatory">*</strong></mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter MaleCount Population" formControlName="MaleCount"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter MaleCount Population" formControlName="MaleCount"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">FemaleCount<strong class="matMandatory">*</strong></mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter FemaleCount Population" formControlName="FemaleCount"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter FemaleCount Population" formControlName="FemaleCount"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -83,7 +83,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">TransGenderCount<strong class="matMandatory">*</strong>
                         </mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter TransGenderCount Population"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter TransGenderCount Population"
                                formControlName="TransGenderCount" autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -94,7 +94,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Farm Size<strong class="matMandatory">*</strong></mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Farm Size" formControlName="FarmSize" autocomplete="off"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Farm Size" formControlName="FarmSize" autocomplete="off"
                                appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -104,7 +104,7 @@
                     <div *ngIf="farmSizeForVillageWise" class="col-lg-12 col-sm-12">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label>Select Farm Size Unit</mat-label>
-                            <mat-select   [disabled]="is_view" formControlName="FarmSizeUnit">
+                            <mat-select   [disabled]="!is_view" formControlName="FarmSizeUnit">
                                 <mat-option value="">
                                     Select
                                 </mat-option>
@@ -121,7 +121,7 @@
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Average Loan Size<strong class="matMandatory">*</strong>
                         </mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Average Loan Size" formControlName="AverageLoanSize"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Average Loan Size" formControlName="AverageLoanSize"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -130,7 +130,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Subsistence Farmer</mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Tour Subsistence Farmer" formControlName="SubsistenceFarmer"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Tour Subsistence Farmer" formControlName="SubsistenceFarmer"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -141,7 +141,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Economic Farmer</mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Tour Economic Farmer" formControlName="EconomicFarmer"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Tour Economic Farmer" formControlName="EconomicFarmer"
                                autocomplete="off" appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -150,7 +150,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Big Farmers</mat-label>
-                        <input  [readonly]="is_view" matInput placeholder="Enter Big Farmers" formControlName="BigFarmers" autocomplete="off"
+                        <input  [readonly]="!is_view" matInput placeholder="Enter Big Farmers" formControlName="BigFarmers" autocomplete="off"
                                appNumberOnly/>
                     </mat-form-field>
                 </div>
@@ -159,7 +159,7 @@
                 <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                         <mat-label class="customMatLabel">Agri Business Potential</mat-label>
-                        <input  [readonly]="is_view" matInput maxlength="200" placeholder="Enter Agri Business Potential"
+                        <input  [readonly]="!is_view" matInput maxlength="200" placeholder="Enter Agri Business Potential"
                                formControlName="AgriBusinessPotential" autocomplete="off"/>
                     </mat-form-field>
                 </div>
@@ -168,7 +168,7 @@
 
         </div>
 
-        <div class="mt-2 justify-content-end text-right border-t py-4" *ngIf="!is_view">
+        <div class="mt-2 justify-content-end text-right border-t py-4" *ngIf="is_view">
             <button mat-raised-button color="primary" *ngIf="isAdd && !updatingCase" class="mr-4" (click)="Add()">
                 <mat-icon class="mr-2">add_circle</mat-icon>
                 Add
