--- a/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
+++ b/src/app/modules/report-managment/apilog-detail/apilog-detail.component.html
@@ -1,11 +1,11 @@
-<h3 class="text-3xl  mt-4  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
+<h3 class="text-3xl  font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2"
     style="background-color: #f6fcf8;">Api Log({{RequestResponse.APIName}})</h3>
 
 
 <div class="row">
     <div class="col-lg-12 col-sm-12">
         <table class="table overflow-scroll">
-            <thead class="bg-success border-0">
+            <thead class="bg-green border-0">
             <tr style="text-align: center">
                 <th scope="col" class="text-white">Request</th>
                 <th scope="col" class="text-white">Response</th>
