--- a/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
+++ b/src/app/modules/geo-fencing/device-tracking/device-tracking.component.html
@@ -56,7 +56,6 @@
         </div>
 
 
-
     </div>
 
 
@@ -68,12 +67,12 @@
              [mapTypeControl]="true" (mapReady)="onMapReady($event)" [restriction]="countryRestriction"
              style="height: 500px !important;">
 
-        <agm-marker *ngFor="let m of fenceMarkers; let i = index"
+        <agm-marker *ngFor="let m of device_locations; let i = index"
                     (markerClick)="gm.lastOpen?.close(); gm.lastOpen = infoWindow; clickedMarker(i, infowindow)"
-                    [latitude]="m.lat" [longitude]="m.lng" [title]="m.BranchId" class=" h-screen">
+                    [latitude]="m.Latitude" [longitude]="m.Longitude" [title]="m.BranchId" class=" h-screen">
 
             <agm-info-window #infowindow>
-                <strong>{{m.BranchId}}</strong>
+                <strong>{{m.PPNo}}</strong>
             </agm-info-window>
 
         </agm-marker>
