--- a/src/app/layout/common/user/user.component.html
+++ b/src/app/layout/common/user/user.component.html
@@ -28,7 +28,7 @@
         <span class="flex flex-col leading-none ">
             <span class="mt-1.5 text-md font-medium">Name :{{user?.DisplayName}}</span>
              <span class="mt-1.5 text-md font-medium">PPNo. :{{user?.UserName}}</span>
-<!--            <span class="mt-1.5 text-md font-medium">Branch Name :{{user?.BranchName}}</span>-->
+            <!--            <span class="mt-1.5 text-md font-medium">Branch Name :{{user?.BranchName}}</span>-->
         </span>
     </button>
     <mat-divider class="my-2"></mat-divider>
@@ -48,11 +48,18 @@
     <!--    </button>-->
     <!--    <mat-divider class="my-2"></mat-divider>-->
     <button
+        mat-menu-item (click)="changePassword()">
+        <mat-icon>vpn_key</mat-icon>
+        <span>Change Password</span>
+
+    </button>
+    <button
         mat-menu-item
         (click)="signOut()">
-        <mat-icon [svgIcon]="'heroicons_outline:logout'"></mat-icon>
+        <mat-icon>logout</mat-icon>
         <span>Sign out</span>
     </button>
+
 </mat-menu>
 
 <mat-menu
