--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -1,4 +1,5 @@
-<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+<div
+    class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
 
 
     <div class="row pt-3">
@@ -14,70 +15,54 @@
                     <mat-icon class="mr-2 down">keyboard_arrow_down</mat-icon>
                     Advance Filter
                 </button>
-              </p>
+            </p>
         </div>
     </div>
 
     <!-- Header -->
 
 
-
-      <div class="collapse show" id="collapseExample">
+    <div class="collapse show" id="collapseExample">
         <div class="card card-body">
-    <!-- Header -->
-    <div  [formGroup]="borrowerForm">
+            <!-- Header -->
+            <div [formGroup]="borrowerForm">
 
-        <div class="flex" style="flex-wrap: wrap;">
-            <app-zone-branch-circle [form]="borrowerForm" [should_show_circle]="true"
-                                    (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
+                <div class="flex" style="flex-wrap: wrap;">
+                    <app-zone-branch-circle [form]="borrowerForm" [should_show_circle]="true"
+                                            (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
 
-                <div class="mx-2">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
 
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label class="customMatLabel">Cnic</mat-label>
-                        <input matInput placeholder="Cnic" formControlName="Cnic" maxlength="30"
-                               autocomplete="off" appNumberOnly/>
-                    </mat-form-field>
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Cnic</mat-label>
+                                <input matInput placeholder="Cnic" formControlName="Cnic" maxlength="30"
+                                       autocomplete="off" appNumberOnly/>
+                            </mat-form-field>
+                        </div>
+                    </div>
+
+                    <div class="mx-2">
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
+
+                            <button class=" mt-2 bg-gray-500 mat-primary" mat-raised-button color="accent"
+                                    type="button" (click)="find()">
+                                <mat-icon class="mr-2">search</mat-icon>
+                                Search
+                            </button>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
-
-
-                <div class="mx-2">
-                    <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;" *ngIf="PPNOVisible">
-                    <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                        <mat-label>PPNO.</mat-label>
-                        <input appNumberOnly matInput formControlName="PPNo" placeholder="Enter PPNo" maxlength="100"
-                               autocomplete="off">
-                    </mat-form-field>
-                </div>
-            </div>
-
-
-
-
-            <div class="mx-2">
-                <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-
-                    <button  class=" mt-2 bg-gray-500 mat-primary" mat-raised-button color="accent"
-                            type="button" (click)="find()">
-                        <mat-icon class="mr-2">search</mat-icon>
-                        Search
-                    </button>
-                </div>
-            </div>
-
-
+        </div>
 
 
     </div>
-        </div>
-      </div>
 
-
-</div>
-
-    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50" style="flex-direction: column; overflow-y: scroll">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50"
+         style="flex-direction: column; overflow-y: scroll">
         <div class="example-table-container ">
             <!--[style.height]="gridHeight"-->
             <mat-table
@@ -120,9 +105,9 @@
                 </ng-container>
 
                 <ng-container matColumnDef="InterestRate">
-                    <mat-header-cell  *matHeaderCellDef>Interest Rate</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Interest Rate</mat-header-cell>
                     <mat-cell *matCellDef="let borrower"><p
-                    style="word-wrap: break-word;
+                        style="word-wrap: break-word;
                         hyphens: auto;
                         max-width: 200px;">{{borrower.InterestRate}}</p></mat-cell>
                 </ng-container>
