--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -3,36 +3,8 @@
     <div class="kt-portlet__body">
 
       <div class="form-group kt-form__group row">
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">Zone <strong class="matMandatory">*</strong></mat-label>
-            <mat-select (selectionChange)="GetBranches($event)" formControlName="ZoneId" [disabled]="isZoneReadOnly">
-              <mat-option>
-                <ngx-mat-select-search placeholderLabel="Search Zone..." (focusout)="validateZoneOnFocusOut()" (keyup)="searchZone($event.target.value)" noEntriesFoundLabel="No Zone Found">
-                </ngx-mat-select-search>
-              </mat-option>
-              <mat-option *ngFor="let zone of SelectedZones" [value]="zone.ZoneId">
-                {{zone.ZoneName }}
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="hasError('ZoneId', 'required')">Zone <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
-        <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
-          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-            <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
-            <mat-select (selectionChange)="SetBranches($event)" formControlName="BranchID" [disabled]="isBranchReadOnly">
-              <mat-option>
-                <ngx-mat-select-search placeholderLabel="Search Branch..." (focusout)="validateBranchOnFocusOut()" noEntriesFoundLabel="No Branch Found" (keyup)="searchBranch($event.target.value)">
-                </ngx-mat-select-search>
-              </mat-option>
-              <mat-option *ngFor="let branch of SelectedBranches" [value]="branch.BranchId">
-                {{branch.Name }}
-              </mat-option>
-            </mat-select>
-            <mat-error *ngIf="hasError('BranchID', 'required')">Branch <strong>required</strong></mat-error>
-          </mat-form-field>
-        </div>
+          <app-zone-branch-circle [form]="applicationHeaderForm" [should_show_circle]="false"
+                                  (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
         <div class="col-lg-4 col-sm-12  kt-margin-bottom-20-mobile">
           <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
             <mat-label class="customMatLabel">Application Date <strong class="matMandatory">*</strong></mat-label>
