--- a/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/upload-documents/upload-documents.component.html
@@ -1,9 +1,12 @@
 <div id="Kt-portlet-margin-top">
     <div class="kt-portlet">
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
+        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header"
+             style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
             <div class="kt-portlet__head-label flex w-full">
                 <h3 class="heading w-11/12">Upload Document</h3>
-                <button  class="text-end w-1/12"  (click)="close(0)"><mat-icon class="ml-2 text-white  p-3   bg-danger rounded-md">close</mat-icon></button>
+                <button class="text-end w-1/12" (click)="close(0)">
+                    <mat-icon class="ml-2 text-white  p-3   bg-danger rounded-md">close</mat-icon>
+                </button>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
 
@@ -31,22 +34,28 @@
                     <div class="form-group kt-form__group row">
 
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" >
-                                <mat-label class="customMatLabel">Loancase NO: <strong class="matMandatory">*</strong></mat-label>
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Loancase NO: <strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <input matInput formControlName="LcNo" readonly>
-                                <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo <strong>required</strong></mat-error>
+                                <mat-error *ngIf="hasError('DocumentRefNo', 'required')">LcNo <strong>required</strong>
+                                </mat-error>
                             </mat-form-field>
                         </div>
 
                         <div class="col-lg-2 kt-margin-bottom-20-mobile">
-                            <input type="button" mat-raised-button color="primary" class=" mx-2 mt-3 mat-raised-button mat-button-base mat-primary searchLCBtn" (click)="loanCase()" value="Search"/>
+                            <input type="button" mat-raised-button color="primary"
+                                   class=" mx-2 mt-3 mat-raised-button mat-button-base mat-primary searchLCBtn"
+                                   (click)="loanCase()" value="Search"/>
                         </div>
 
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Status: <strong class="matMandatory">*</strong></mat-label>
+                                <mat-label class="customMatLabel">Status: <strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <input matInput formControlName="LoanStatus">
-                                <mat-error *ngIf="hasError('LoanStatus', 'required')">Document Ref No <strong>required</strong></mat-error>
+                                <mat-error *ngIf="hasError('LoanStatus', 'required')">Document Ref No
+                                    <strong>required</strong></mat-error>
                             </mat-form-field>
                         </div>
 
@@ -55,26 +64,31 @@
                     <div class="form-group kt-form__group row">
 
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" >
-                                <mat-label class="customMatLabel">Loan Type: <strong class="matMandatory">*</strong></mat-label>
+                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                <mat-label class="customMatLabel">Loan Type: <strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <input matInput formControlName="CategoryName" readonly>
-                                <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Loan Type <strong>required</strong></mat-error>
+                                <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Loan Type
+                                    <strong>required</strong></mat-error>
                             </mat-form-field>
                         </div>
 
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Loan Doc Type:<strong class="matMandatory">*</strong></mat-label>
+                                <mat-label class="customMatLabel">Loan Doc Type:<strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <mat-select formControlName="DocLoanId">
-<!--                                    <mat-option>-->
-<!--                                        <ngx-mat-select-search placeholderLabel="Search Loan Type..." (focusout)="validateLoanTypeOnFocusOut()" noEntriesFoundLabel="No Loan Type Found" (keyup)="searchLoanType($event.target.value)">-->
-<!--                                        </ngx-mat-select-search>-->
-<!--                                    </mat-option>-->
-                                    <mat-option *ngFor="let documentType of documentSelectedLoanType" [value]="documentType.Id">
+                                    <!--                                    <mat-option>-->
+                                    <!--                                        <ngx-mat-select-search placeholderLabel="Search Loan Type..." (focusout)="validateLoanTypeOnFocusOut()" noEntriesFoundLabel="No Loan Type Found" (keyup)="searchLoanType($event.target.value)">-->
+                                    <!--                                        </ngx-mat-select-search>-->
+                                    <!--                                    </mat-option>-->
+                                    <mat-option *ngFor="let documentType of documentSelectedLoanType"
+                                                [value]="documentType.Id">
                                         {{documentType.Name }}
                                     </mat-option>
                                 </mat-select>
-                                <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id <strong>required</strong></mat-error>
+                                <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id
+                                    <strong>required</strong></mat-error>
                             </mat-form-field>
                         </div>
 
@@ -88,7 +102,8 @@
 
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                <mat-label class="customMatLabel">Documents:<strong class="matMandatory">*</strong></mat-label>
+                                <mat-label class="customMatLabel">Documents:<strong class="matMandatory">*</strong>
+                                </mat-label>
                                 <mat-select formControlName="ParentDocId">
                                     <!--                                    <mat-option>-->
                                     <!--                                        <ngx-mat-select-search placeholderLabel="Search Loan Type..." (focusout)="validateLoanTypeOnFocusOut()" noEntriesFoundLabel="No Loan Type Found" (keyup)="searchLoanType($event.target.value)">-->
@@ -98,7 +113,8 @@
                                         {{documentType.Name }}
                                     </mat-option>
                                 </mat-select>
-                                <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id <strong>required</strong></mat-error>
+                                <mat-error *ngIf="hasError('ParentDocId', 'required')">Parent Doc Id
+                                    <strong>required</strong></mat-error>
                             </mat-form-field>
                         </div>
 
@@ -109,18 +125,23 @@
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">Document Ref No. <strong class="matMandatory">*</strong></mat-label>
+                                    <mat-label class="customMatLabel">Document Ref No. <strong
+                                        class="matMandatory">*</strong></mat-label>
                                     <input matInput formControlName="DocumentRefNo">
-                                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Document Ref No <strong>required</strong></mat-error>
+                                    <mat-error *ngIf="hasError('DocumentRefNo', 'required')">Document Ref No <strong>required</strong>
+                                    </mat-error>
                                 </mat-form-field>
                             </div>
                         </div>
                         <div class="col-lg-4 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-                                    <mat-label class="customMatLabel">No of Files to Upload<strong class="matMandatory">*</strong></mat-label>
-                                    <input matInput formControlName="NoOfFilesToUpload">
-                                    <mat-error *ngIf="hasError('NoOfFilesToUpload', 'required')">No Of Files To Upload <strong>required</strong></mat-error>
+                                    <mat-label class="customMatLabel">No of Files to Upload<strong class="matMandatory">*</strong>
+                                    </mat-label>
+                                    <input matInput formControlName="NoOfFilesToUpload"
+                                           (change)="changeFilesQuantity()">
+                                    <mat-error *ngIf="hasError('NoOfFilesToUpload', 'required')">No Of Files To Upload
+                                        <strong>required</strong></mat-error>
                                 </mat-form-field>
                             </div>
                         </div>
@@ -156,18 +177,20 @@
                                 </thead>
                                 <tbody>
 
-                                <tr>
+                                <tr *ngFor="let item of [].constructor(number_of_files); let i = index">
                                     <td>
                                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                                                <input formControlName="file" id="file" type="file" (change)="onFileChange($event)">
+                                                <input formControlName="file" type="file" id="file_{{i}}"
+                                                       (change)="onFileChange($event)">
                                             </div>
                                         </div>
                                     </td>
                                     <td>
                                         <div class="col-lg-3 kt-margin-bottom-20-mobile">
                                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                                <mat-form-field class="mat-form-field-fluid w-full"
+                                                                appearance="outline">
                                                     <mat-label class="customMatLabel">Page No</mat-label>
                                                     <input matInput formControlName="PageNumber">
                                                 </mat-form-field>
@@ -191,7 +214,12 @@
 
     <div class="form-group kt-form__group row">
         <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-between">
-            <button style="background-color: #01671B;" type="button" class="mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveLoanDocuments()"><mat-icon class="mr-2">save</mat-icon> Save</button>
+            <button style="background-color: #01671B;" type="button"
+                    class="mt-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                    (click)="saveLoanDocuments()">
+                <mat-icon class="mr-2">save</mat-icon>
+                Save
+            </button>
         </div>
     </div>
 
